Update meta, resume

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Joeleen Kennedy | a hybrid designer/front end developer who draws, paints,
-      knits, and bakes sourdough
+      Joeleen Kennedy | a UX-focused full-stack engineer who loves WordPress,
+      JavaScript, HTML, CSS and Accessibility
     </title>
   </head>
   <body>
